--- a/src/factorio.css
+++ b/src/factorio.css
@@ -3140,3 +3140,27 @@ a.download i {
     white-space: nowrap;
     flex: 1;
 }
+
+.richtext-icon {
+    aspect-ratio: 1;
+    height: 100%;
+    vertical-align: bottom;
+    position: relative;
+    display: inline-block;
+}
+
+.richtext-icon > .icon {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+}
+
+.richtext-icon > .quality {
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 50%;
+    height: 50%;
+}
