--- a/src/factorio.css
+++ b/src/factorio.css
@@ -3166,12 +3166,29 @@ a.download i {
 }
 
 /* Add these to the factorio.css file */
-table td, table th {
-    border: 1px solid #232223;
-    padding: 4px;
+.spreadsheet-container {
+    border: 0;
+    background-color: #313031;
+    box-shadow: inset 0px 2px 2px -1px #000,
+    inset 0px 0px 2px 0px #181616,
+    inset 0px -2px 2px -2px #fff,
+    0px 0px 2px 0px #2b2b2b;
+    margin: 4px;
+    padding: 2px;
 }
 
-table {
-    border-collapse: collapse;
+.spreadsheet-row {
+    display: flex;
     width: 100%;
+}
+
+.spreadsheet-cell {
+    margin-bottom: 2px;
+    padding: 8px;
+    background-color: #414040;
+    box-shadow: inset 0px 0px 4px 0px #2d2d2d,
+    0px -2px 2px -1px #888,
+    -2px 0px 2px -2px #000,
+    2px 0px 2px -2px #000,
+    0px 2px 2px -2px #000;
 }
