--- a/src/factorio.css
+++ b/src/factorio.css
@@ -3087,19 +3087,46 @@ a.download i {
 }
 
 .factorio-icon {
-    object-fit: contain;
+    position: relative;
+    display: inline-block;  /* Or block depending on your needs */
+}
+/* Icons */
+.factorio-icon {
     width: 32px;
     height: 32px;
+    object-fit: contain;
 }
 
-.blueprint-tree-row {
+.placeholder {
+    width: 32px;
+    height: 32px;
+    object-fit: contain;
+}
+
+/* Icon group container */
+.factorio-icon-group {
+    position: relative;
+    display: inline-block;
+}
+
+/* Quality overlay when inside a group */
+.factorio-icon-group img.quality {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 66%;
+    height: 66%;
+}
+
+/* Tree specific contextual styles */
+.tree-row {
     margin-right: 4px;
     border-radius: 4px;
     transition: background-color 0.15s ease;
     padding: 2px 0;
 }
 
-.blueprint-tree-row:hover {
+.tree-row:hover {
     background-color: #e39827;
     box-shadow: inset 0px 9px 2px -8px #fff,
     inset 0px 8px 4px -8px #000,
@@ -3109,7 +3136,7 @@ a.download i {
     inset 0px 0px 4px 2px #f9b44b;
 }
 
-.blueprint-tree-row.selected {
+.tree-row.selected {
     background-color: #f1be64;
     box-shadow: inset 0px 10px 2px -8px #000,
     inset 0px 9px 2px -8px #000,
@@ -3121,48 +3148,28 @@ a.download i {
     0px 0px 4px 0px #000;
 }
 
-.blueprint-tree-separator {
+.blueprint-tree .separator {
     width: 1px;
     height: 24px;
     background-color: #666;
     margin: 0 8px;
 }
 
-.blueprint-tree-icon-placeholder {
-    width: 24px;
-    height: 24px;
-    margin: 0 2px 0 0;
-}
-
-.blueprint-tree-label {
+.blueprint-tree .label {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     flex: 1;
 }
 
-.richtext-icon {
-    aspect-ratio: 1;
-    height: 100%;
-    vertical-align: bottom;
-    position: relative;
-    display: inline-block;
+.blueprint-tree img.factorio-icon {
+    width: 24px;
+    height: 24px;
 }
 
-.richtext-icon > .icon {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
-}
-
-.richtext-icon > .quality {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    width: 50%;
-    height: 50%;
+.blueprint-tree .placeholder {
+    width: 24px;
+    height: 24px;
 }
 
 /* Container styles */
