--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('/assets/bg_v4-85.jpg'), var(--factorio-bg-fallback);
+	background-image: url("/assets/bg_v4-85.jpg"), var(--factorio-bg-fallback);
 }
 
 .blueprint-tree-row:hover {
@@ -174,7 +174,7 @@ body {
 	align-items: center;
 }
 
-.history-checkbox-container input[type='checkbox'] {
+.history-checkbox-container input[type="checkbox"] {
 	cursor: pointer;
 	width: 16px;
 	height: 16px;
